--- a/src/css/style.css
+++ b/src/css/style.css
@@ -634,59 +634,15 @@ input[type="password"] {
 
 #submit-ec-card {
   width: 49rem;
-  height: 28em;
+  height: 48em;
   flex-shrink: 0;
   border-radius: 2.375rem;
   border: 1px solid #E5E5E5;
   background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
-  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.20);  
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-
 
 .label-text {
   color: var(--Primary, #0D3273);
@@ -696,8 +652,116 @@ input[type="password"] {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  padding-left: 1.2rem;
+}
+
+#ec-options {
+  display: flex;
 }
 
 #standard-ec, #urgent-ec {
-  flex-wrap: wrap;
+  padding-left: 1.2rem;
+  padding-top: 1.68rem;
+}
+
+.ec-form-dropdown {
+  padding-left: 1.2rem;
+  padding-top: 0.24rem;
+}
+
+#summary {
+ display: 'flex';
+ flex-direction: 'column';
+}
+
+#summary-text-box {
+  margin-top: 0.24rem;
+  margin-left: -20.8rem;
+}
+
+#ec-summary-box {
+  width: 46rem;
+  height: 7rem;
+}
+
+
+#affected-assessments, #ec-reason{
+  width: 46rem;
+}
+
+.affected-checkbox{
+  padding-left: 1.2rem;
+  padding-top: 0.24rem;
+}
+
+#file-attachment-box {
+  padding-top: 0.24rem;
+  padding-left: 1.2rem;
+}
+
+
+#submit-form {
+  text-align: center;
+  padding-top: 2rem;
+}
+
+.submit-button {
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: var(--Primary, #0D3273);
+  box-shadow: 0px 5px 4px 0px #092657 inset;
+  color: white;
+  width: 10rem;
+  height: 1.8em;
+  flex-shrink: 0;
+  color: var(--Title-Text, #FEFEFE);
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+input[type="checkbox"], input[type="text"], select{
+  border-radius: 0.75rem;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset; 
+  font-family: Inter;
+}
+
+input[type="file"] {
+  font-family: Inter;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset; 
+  border-radius: 0.2rem;
+  width: 15rem;
+
+}
+
+#affected-modules, #affected-assessments {
+  padding-top: 1rem;
+  font-family: Inter;
+}
+
+#affected-assessments {
+  max-height: 200px;
+  overflow-y: 'auto'
+  
+}
+
+.assessments-outer-container {
+  width: 100%; 
+  height: 8rem; 
+  overflow: hidden; 
+  padding-left: 1.2rem;
+}
+
+.assessments-inner-container {
+  width: 100%;
+  height: 100%; 
+  overflow-y: auto; 
+  border: 1px solid #ccc; 
 }
