--- a/src/css/style.css
+++ b/src/css/style.css
@@ -854,3 +854,116 @@ input[type=file] {
   overflow-y: auto;
   border: 1px solid #ccc;
 }/*# sourceMappingURL=style.css.map */
+
+
+/* -------------------------------------- */
+/* 
+  Submit Issue styling 
+*/
+
+#submit-issue p {
+  color: var(--Secondary-Text, #939393);
+  margin-top: 2rem;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1rem;
+  font-style: italic;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.lab-button {
+  left: 25%;
+  margin-top: 2rem;
+  position: relative;
+  border-radius: 0.75rem;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset;
+  color: var(--Primary, #0D3273);
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  height: 3rem;
+  width: 7rem;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; /* Add this to vertically center the content */
+}
+
+.lab-button p {
+  position: absolute;
+  margin: 0; 
+  padding-bottom: 1.8rem;
+}
+
+
+.service-button {
+  left: 60%;
+  margin-top: -2.8rem;
+  position: relative;
+  border-radius: 0.75rem;
+  border: 1px solid #E5E5E5;
+  background: #F5F5F5;
+  box-shadow: 0px 1px 24px 0px rgba(149, 157, 165, 0.20) inset;
+  color: var(--Primary, #0D3273);
+  font-family: Inter;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  height: 3rem;
+  width: 7rem;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; /* Add this to vertically center the content */
+}
+
+.service-button p {
+  position: absolute;
+  margin: 0; 
+  padding-bottom: 1.8rem;
+}
+
+
+#submit-lab-card {
+  width: 58rem;
+  height: 28rem;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+#submit-service-card {
+
+  width: 58rem;
+  height: 32rem;
+  flex-shrink: 0;
+  border-radius: 2.375rem;
+  border: 1px solid #E5E5E5;
+  background: radial-gradient(104.85% 136.88% at 6.53% 100%, #FEFEFE 0%, #FBFBFB 100%);
+  box-shadow: 0px 8px 24px 0px rgba(149, 157, 165, 0.2);
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+
+}
+
+
+.form-content {
+  margin-left: 6rem;
+}
+
+#currently-selected {
+  border-radius: 1rem;
+  background: var(--Accent, #CEA600);
+  width: 3rem;
+  height: 0.1875rem;
+  flex-shrink: 0;
+  margin-top: 2rem;
+}
